--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -492,7 +492,7 @@ Working, if working age & \checkmark & \checkmark & \checkmark & \checkmark \\
 \label{table:females}
 \centering
 \scalebox{.97}{
-\input{output/tables/abccare/rslt_female_main1}}
+\input{output/rslt_female_main}}
 \begin{tablenotes}
 \footnotesize
 \item Note: This table displays the treatment effects for females, pooling ABC and CARE. Column (1): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. Column (2): adjusts the estimates in (1) for attrition and controls for a set of covariates (see Appendix~\ref{appendix:controls}). Column (3): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who did not receive preschool alternatives. Column (4) adjusts the estimates in (3) for attrition and controls for a set of covariates. Column (5): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the subjects who are likely not to be enrolled in alternative preschools. Column (6): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who received preschool alternatives. Column (7) adjusts the estimates in (6) for attrition and controls for a set of covariates. Column (8): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely to be enrolled in alternative preschools. The results in bold are significant at the 10\% level in a single-sided, non-parametric, bootstrapped test.
@@ -508,7 +508,7 @@ Working, if working age & \checkmark & \checkmark & \checkmark & \checkmark \\
 \label{table:males}
 \centering
 \scalebox{.97}{ 
-\input{output/tables/abccare/rslt_male_main1}}
+\input{output/rslt_male_main}}
 \begin{tablenotes}
 \footnotesize
 \item Note: This table displays the treatment effects for females, pooling ABC and CARE. Column (1): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned as control. Column (2): adjusts the estimates in (1) for attrition and controls for a set of covariates (see Appendix~\ref{appendix:controls}). Column (3): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who did not receive preschool alternatives. Column (4) adjusts the estimates in (3) for attrition and controls for a set of covariates. Column (5): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the subjects who are likely not to be enrolled in alternative preschools. Column (6): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to subjects who received preschool alternatives. Column (7) adjusts the estimates in (6) for attrition and controls for a set of covariates. Column (8): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the subjects who are likely to be enrolled in alternative preschools. The results in bold are significant at the 10\% level in a single-sided, non-parametric, bootstrapped test.
@@ -543,7 +543,7 @@ Working, if working age & \checkmark & \checkmark & \checkmark & \checkmark \\
 \caption{Cost-benefit Analysis of ABC and CARE, Summary}
 \label{table:cba}
 \centering
-\input{output/tables/abccare/sensitivity.tex}
+\input{output/sensitivity.tex}
 \begin{tablenotes}
 \item Note: This table presents the estimates of the net present value (NPV) for each component, and the internal rate of return (IRR) and the benefit-to-cost ratio (B/C) of ABC for different scenarios based on comparing the groups randomly assigned to receive center-based childcare and the groups randomly assigned as control in ABC and CARE. The first row represents the baseline estimates. The rest of the rows present estimates for scenarios in which we remove the NPV estimates of the component listed in the first column. The quantity listed in the NPV columns is the component we actually remove when computing the calculation in each row. All the money figures are in 2014 USD and are discounted to each child's birth, unless otherwise specified. For the B/C we use a discount rate of $3\%$, unless otherwise specified. The results in bold are significant at the 10\% level in a single-sided, non-parametric, bootstrapped test. We resample both the experimental and the auxiliary data sources. 
 \end{tablenotes}
@@ -561,7 +561,7 @@ Working, if working age & \checkmark & \checkmark & \checkmark & \checkmark \\
 \caption{Cost-benefit Analysis Accounting for Control Substitution, ABC and CARE}
 \label{table:cbacs}
 \centering
-\input{output/tables/abccare/cba_summary.tex}
+\input{output/cba_summary.tex}
 \begin{tablenotes}
 \item Note: This table displays estimates of the internal rate of return (IRR) and the benefit-to-cost ratio (B/C) for ABC and CARE for three cases. Not accounting for control substitution (baseline); comparing ABC and CARE to staying at home (relative to staying at home); and comparing ABC to alternative preschools (relative to alternative preschools). For the B/C we use a discount rate of $3\%$. The results in bold are significant at the 10\% level in a single-sided, non-parametric, bootstrapped test. We resample both the experimental and the auxiliary data sources. 
 \end{tablenotes}
