--- a/AppOutput/Program/baseline_balance.tex
+++ b/AppOutput/Program/baseline_balance.tex
@@ -1,49 +1,31 @@
-\begin{table}[H]
-\captionsetup{singlelinecheck=false,justification=centering}
-\caption{Baseline Characteristics by Treatment Status \label{tab:baseline}}
+  \begin{tabular}{cccccccc}
+  \toprule
 
-  \begin{threeparttable}
-  \begin{tabular}{ccccccc}
+     &  & \scriptsize{Control} & \scriptsize{Treated} & \scriptsize{Control} & \scriptsize{Treated} & \mc{2}{c}{\scriptsize{$p$-value}} \\  
 
-    \hline\hline
+    \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{Obs.} & \scriptsize{Obs.} & \scriptsize{Mean} & \scriptsize{Mean} & \scriptsize{Single $H_0$} & \scriptsize{Multiple $H_0$} \\ 
+    \midrule  
 
-     & \mc{2}{c}{\footnotesize{Control}} & \mc{2}{c}{\footnotesize{Treatment}} & \mc{2}{c}{\footnotesize{Difference}} \\ 
-    \cmidrule(lr){2-3} \cmidrule(lr){4-5} \cmidrule(lr){6-7} 
+    \mc{1}{l}{\scriptsize{Male}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{57}} & \mc{1}{c}{\scriptsize{59}} & \mc{1}{c}{\scriptsize{0.439}} & \mc{1}{c}{\scriptsize{0.492}} & \mc{1}{c}{\scriptsize{(0.400)}} & \mc{1}{c}{\scriptsize{(0.600)}} \\  
 
-    \footnotesize{Variable} & \footnotesize{Mean} & \footnotesize{Obs} & \footnotesize{Mean} & \footnotesize{Obs} & \footnotesize{$\Delta$Mean} & \footnotesize{$p$-value} \\ 
-    \hline  
+    \mc{1}{l}{\scriptsize{Birth Weight}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{56}} & \mc{1}{c}{\scriptsize{58}} & \mc{1}{c}{\scriptsize{7.192}} & \mc{1}{c}{\scriptsize{6.831}} & \mc{1}{c}{\scriptsize{(0.300)}} & \mc{1}{c}{\scriptsize{(0.350)}} \\  
 
-    \mc{1}{l}{\footnotesize{Male}} & \mc{1}{r}{\footnotesize{0.444}} & \mc{1}{r}{\footnotesize{54}} & \mc{1}{r}{\footnotesize{0.492}} & \mc{1}{r}{\footnotesize{59}} & \mc{1}{r}{\footnotesize{0.047}} & \mc{1}{r}{\footnotesize{(0.620)}} \\  
+    \mc{1}{l}{\scriptsize{No. Siblings in Household}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{57}} & \mc{1}{c}{\scriptsize{59}} & \mc{1}{c}{\scriptsize{0.754}} & \mc{1}{c}{\scriptsize{0.508}} & \mc{1}{c}{\scriptsize{(0.300)}} & \mc{1}{c}{\scriptsize{(0.300)}} \\  
 
-    \mc{1}{l}{\footnotesize{Birth Weight}} & \mc{1}{r}{\footnotesize{7.201}} & \mc{1}{r}{\footnotesize{54}} & \mc{1}{r}{\footnotesize{6.831}} & \mc{1}{r}{\footnotesize{58}} & \mc{1}{r}{\footnotesize{-0.370}} & \mc{1}{r}{\footnotesize{(0.147)}} \\  
+    \mc{1}{l}{\scriptsize{Birth Year}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{57}} & \mc{1}{c}{\scriptsize{59}} & \mc{1}{c}{\scriptsize{1974}} & \mc{1}{c}{\scriptsize{1974}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.700)}} \\ 
+    \midrule  
 
-    \mc{1}{l}{\footnotesize{No. Siblings in Household}} & \mc{1}{r}{\footnotesize{0.796}} & \mc{1}{r}{\footnotesize{54}} & \mc{1}{r}{\footnotesize{0.508}} & \mc{1}{r}{\footnotesize{59}} & \mc{1}{r}{\footnotesize{-0.288}} & \mc{1}{r}{\footnotesize{(0.173)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Education}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{57}} & \mc{1}{c}{\scriptsize{59}} & \mc{1}{c}{\scriptsize{9.877}} & \mc{1}{c}{\scriptsize{10.492}} & \mc{1}{c}{\scriptsize{\textbf{(0.100)}}} & \mc{1}{c}{\scriptsize{(0.300)}} \\  
 
-    \mc{1}{l}{\footnotesize{Birth Year}} & \mc{1}{r}{\footnotesize{1,974}} & \mc{1}{r}{\footnotesize{54}} & \mc{1}{r}{\footnotesize{1,974}} & \mc{1}{r}{\footnotesize{59}} & \mc{1}{r}{\footnotesize{-0.167}} & \mc{1}{r}{\footnotesize{(0.621)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Age}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{57}} & \mc{1}{c}{\scriptsize{59}} & \mc{1}{c}{\scriptsize{20.123}} & \mc{1}{c}{\scriptsize{19.525}} & \mc{1}{c}{\scriptsize{(0.550)}} & \mc{1}{c}{\scriptsize{(0.600)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's Education}} & \mc{1}{r}{\footnotesize{10.019}} & \mc{1}{r}{\footnotesize{54}} & \mc{1}{r}{\footnotesize{10.492}} & \mc{1}{r}{\footnotesize{59}} & \mc{1}{r}{\footnotesize{0.473}} & \mc{1}{r}{\footnotesize{(0.166)}} \\  
+    \mc{1}{l}{\scriptsize{Mother Employed}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{57}} & \mc{1}{c}{\scriptsize{59}} & \mc{1}{c}{\scriptsize{0.211}} & \mc{1}{c}{\scriptsize{0.322}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.100)}}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's Age}} & \mc{1}{r}{\footnotesize{20.407}} & \mc{1}{r}{\footnotesize{54}} & \mc{1}{r}{\footnotesize{19.525}} & \mc{1}{r}{\footnotesize{59}} & \mc{1}{r}{\footnotesize{-0.882}} & \mc{1}{r}{\footnotesize{(0.339)}} \\  
+    \mc{1}{l}{\scriptsize{Parental Income}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{57}} & \mc{1}{c}{\scriptsize{58}} & \mc{1}{c}{\scriptsize{6,158}} & \mc{1}{c}{\scriptsize{6,996}} & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.750)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother Worked before Pregnancy}} & \mc{1}{r}{\footnotesize{0.611}} & \mc{1}{r}{\footnotesize{54}} & \mc{1}{r}{\footnotesize{0.831}} & \mc{1}{r}{\footnotesize{59}} & \mc{1}{r}{\footnotesize{0.219}} & \mc{1}{r}{\footnotesize{\textbf{(0.010)}}} \\  
+    \mc{1}{l}{\scriptsize{Mother's IQ}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{57}} & \mc{1}{c}{\scriptsize{59}} & \mc{1}{c}{\scriptsize{83.491}} & \mc{1}{c}{\scriptsize{85.322}} & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(0.550)}} \\  
 
-    \mc{1}{l}{\footnotesize{Parent Income}} & \mc{1}{r}{\footnotesize{3,442}} & \mc{1}{r}{\footnotesize{54}} & \mc{1}{r}{\footnotesize{4,236}} & \mc{1}{r}{\footnotesize{58}} & \mc{1}{r}{\footnotesize{793}} & \mc{1}{r}{\footnotesize{(0.528)}} \\  
+    \mc{1}{l}{\scriptsize{Father at Home}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{57}} & \mc{1}{c}{\scriptsize{59}} & \mc{1}{c}{\scriptsize{0.351}} & \mc{1}{c}{\scriptsize{0.220}} & \mc{1}{c}{\scriptsize{\textbf{(0.050)}}} & \mc{1}{c}{\scriptsize{(0.150)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's IQ}} & \mc{1}{r}{\footnotesize{84.148}} & \mc{1}{r}{\footnotesize{54}} & \mc{1}{r}{\footnotesize{85.322}} & \mc{1}{r}{\footnotesize{59}} & \mc{1}{r}{\footnotesize{1.174}} & \mc{1}{r}{\footnotesize{(0.591)}} \\  
-
-    \mc{1}{l}{\footnotesize{Father Home}} & \mc{1}{r}{\footnotesize{0.370}} & \mc{1}{r}{\footnotesize{54}} & \mc{1}{r}{\footnotesize{0.220}} & \mc{1}{r}{\footnotesize{59}} & \mc{1}{r}{\footnotesize{-0.150}} & \mc{1}{r}{\footnotesize{\textbf{(0.083)}}} \\  
-
-    \hline\hline
-
+  \bottomrule
   \end{tabular}
-    \begin{tablenotes}
-    \scriptsize
-    \item 
-Note: this table shows the balance in observed characteristics between treatment
-and control groups at baseline. The $p$-values listed are from a two-sided $t$-test 
-of equality of means with unequal variances.
-
-    \end{tablenotes}
-  \end{threeparttable}
-
-\end{table}
