--- a/AppOutput/Program/baseline_coh1.tex
+++ b/AppOutput/Program/baseline_coh1.tex
@@ -1,49 +1,31 @@
-\begin{table}[H]
-\captionsetup{singlelinecheck=false,justification=centering}
-\caption{Baseline Characteristics by Treatment Status, Cohort 1 \label{tab:baseline_coh1}}
+  \begin{tabular}{cccccccc}
+  \toprule
 
-  \begin{threeparttable}
-  \begin{tabular}{ccccccc}
-  \hline\hline
+     &  & \scriptsize{Control} & \scriptsize{Treated} & \scriptsize{Control} & \scriptsize{Treated} & \mc{2}{c}{\scriptsize{$p$-value}} \\  
 
-     &  &  & \footnotesize{Control} & \footnotesize{Treatment} & \mc{2}{c}{\footnotesize{$p$-value}} \\  
+    \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{Obs.} & \scriptsize{Obs.} & \scriptsize{Mean} & \scriptsize{Mean} & \scriptsize{Single $H_0$} & \scriptsize{Multiple $H_0$} \\ 
+    \midrule  
 
-    \footnotesize{Variable} & \footnotesize{Age} & \footnotesize{Obs} & \footnotesize{Mean} & \footnotesize{Effect} & \footnotesize{Single $H_0$} & \footnotesize{Multiple $H_0$} \\ 
-    \hline  
+    \mc{1}{l}{\scriptsize{Male}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{0.357}} & \mc{1}{c}{\scriptsize{0.286}} & \mc{1}{c}{\scriptsize{(0.650)}} & \mc{1}{c}{\scriptsize{(0.700)}} \\  
 
-    \mc{1}{l}{\footnotesize{Male}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{28}} & \mc{1}{c}{\footnotesize{0.351}} & \mc{1}{c}{\footnotesize{-0.065}} & \mc{1}{c}{\footnotesize{(0.710)}} & \mc{1}{c}{\footnotesize{(0.936)}} \\  
+    \mc{1}{l}{\scriptsize{Birth Weight}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{6.721}} & \mc{1}{c}{\scriptsize{6.502}} & \mc{1}{c}{\scriptsize{(0.650)}} & \mc{1}{c}{\scriptsize{(0.600)}} \\  
 
-    \mc{1}{l}{\footnotesize{Birth Weight}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{27}} & \mc{1}{c}{\footnotesize{6.717}} & \mc{1}{c}{\footnotesize{-0.212}} & \mc{1}{c}{\footnotesize{(0.649)}} & \mc{1}{c}{\footnotesize{(0.913)}} \\  
+    \mc{1}{l}{\scriptsize{No. Siblings in Household}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{1.786}} & \mc{1}{c}{\scriptsize{0.571}} & \mc{1}{c}{\scriptsize{\textbf{(0.100)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} \\  
 
-    \mc{1}{l}{\footnotesize{No. Siblings in Household}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{28}} & \mc{1}{c}{\footnotesize{1.751}} & \mc{1}{c}{\footnotesize{-1.172}} & \mc{1}{c}{\footnotesize{\textbf{(0.029)}}} & \mc{1}{c}{\footnotesize{(0.125)}} \\  
+    \mc{1}{l}{\scriptsize{Birth Year}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{1972}} & \mc{1}{c}{\scriptsize{1972}} & \mc{1}{c}{\scriptsize{(0.150)}} & \mc{1}{c}{\scriptsize{(0.400)}} \\ 
+    \midrule  
 
-    \mc{1}{l}{\footnotesize{Birth Year}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{28}} & \mc{1}{c}{\footnotesize{1,972}} & \mc{1}{c}{\footnotesize{-0.143}} & \mc{1}{c}{\footnotesize{(0.311)}} & \mc{1}{c}{\footnotesize{(0.675)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Education}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{9.857}} & \mc{1}{c}{\scriptsize{10.571}} & \mc{1}{c}{\scriptsize{(0.300)}} & \mc{1}{c}{\scriptsize{(0.600)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's Education}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{28}} & \mc{1}{c}{\footnotesize{9.857}} & \mc{1}{c}{\footnotesize{0.722}} & \mc{1}{c}{\footnotesize{(0.283)}} & \mc{1}{c}{\footnotesize{(0.680)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Age}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{23.929}} & \mc{1}{c}{\scriptsize{19.500}} & \mc{1}{c}{\scriptsize{(0.150)}} & \mc{1}{c}{\scriptsize{\textbf{(0.100)}}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's Age}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{28}} & \mc{1}{c}{\footnotesize{23.787}} & \mc{1}{c}{\footnotesize{-4.296}} & \mc{1}{c}{\footnotesize{\textbf{(0.059)}}} & \mc{1}{c}{\footnotesize{(0.208)}} \\  
+    \mc{1}{l}{\scriptsize{Mother Employed}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{0.143}} & \mc{1}{c}{\scriptsize{0.214}} & \mc{1}{c}{\scriptsize{(0.750)}} & \mc{1}{c}{\scriptsize{(0.750)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother Worked Before Pregnancy}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{28}} & \mc{1}{c}{\footnotesize{0.288}} & \mc{1}{c}{\footnotesize{0.354}} & \mc{1}{c}{\footnotesize{\textbf{(0.060)}}} & \mc{1}{c}{\footnotesize{(0.224)}} \\  
+    \mc{1}{l}{\scriptsize{Parental Income}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{7,291}} & \mc{1}{c}{\scriptsize{8,272}} & \mc{1}{c}{\scriptsize{(0.350)}} & \mc{1}{c}{\scriptsize{(0.950)}} \\  
 
-    \mc{1}{l}{\footnotesize{Parental Income}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{27}} & \mc{1}{c}{\footnotesize{5,492}} & \mc{1}{c}{\footnotesize{2,858}} & \mc{1}{c}{\footnotesize{(0.496)}} & \mc{1}{c}{\footnotesize{(0.858)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's IQ}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{75.857}} & \mc{1}{c}{\scriptsize{81.286}} & \mc{1}{c}{\scriptsize{(0.300)}} & \mc{1}{c}{\scriptsize{(0.400)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's IQ}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{28}} & \mc{1}{c}{\footnotesize{75.865}} & \mc{1}{c}{\footnotesize{5.581}} & \mc{1}{c}{\footnotesize{(0.233)}} & \mc{1}{c}{\footnotesize{(0.584)}} \\  
+    \mc{1}{l}{\scriptsize{Father at Home}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{0.571}} & \mc{1}{c}{\scriptsize{0.357}} & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(0.550)}} \\  
 
-    \mc{1}{l}{\footnotesize{Father at Home}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{28}} & \mc{1}{c}{\footnotesize{0.565}} & \mc{1}{c}{\footnotesize{-0.206}} & \mc{1}{c}{\footnotesize{(0.282)}} & \mc{1}{c}{\footnotesize{(0.642)}} \\  
-
-  \hline\hline
+  \bottomrule
   \end{tabular}
-    \begin{tablenotes}
-    \scriptsize
-    \item 
-Note: this table shows the balance in observed characteristics between the treatment 
-and control groups at baseline. We present $p$-values from single hypothesis testing 
-per characteristic and multiple hypotheses testing across all characteristics.
-Both $p$-values are two-sided and non-parametric. We construct them 
-based on 1,000 re-draws of the full sample. The estimates we display are the means of 
-the empirical bootstrap distribution. 
-
-    \end{tablenotes}
-  \end{threeparttable}
-
-\end{table}
