--- a/AppOutput/Program/baseline_coh2.tex
+++ b/AppOutput/Program/baseline_coh2.tex
@@ -1,49 +1,31 @@
-\begin{table}[H]
-\captionsetup{singlelinecheck=false,justification=centering}
-\caption{Baseline Characteristics by Treatment Status, Cohort 2 \label{tab:baseline_coh2}}
+  \begin{tabular}{cccccccc}
+  \toprule
 
-  \begin{threeparttable}
-  \begin{tabular}{ccccccc}
-  \hline\hline
+     &  & \scriptsize{Control} & \scriptsize{Treated} & \scriptsize{Control} & \scriptsize{Treated} & \mc{2}{c}{\scriptsize{$p$-value}} \\  
 
-     &  &  & \footnotesize{Control} & \footnotesize{Treatment} & \mc{2}{c}{\footnotesize{$p$-value}} \\  
+    \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{Obs.} & \scriptsize{Obs.} & \scriptsize{Mean} & \scriptsize{Mean} & \scriptsize{Single $H_0$} & \scriptsize{Multiple $H_0$} \\ 
+    \midrule  
 
-    \footnotesize{Variable} & \footnotesize{Age} & \footnotesize{Obs} & \footnotesize{Mean} & \footnotesize{Effect} & \footnotesize{Single $H_0$} & \footnotesize{Multiple $H_0$} \\ 
-    \hline  
+    \mc{1}{l}{\scriptsize{Male}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{0.462}} & \mc{1}{c}{\scriptsize{0.500}} & \mc{1}{c}{\scriptsize{(0.950)}} & \mc{1}{c}{\scriptsize{(1.000)}} \\  
 
-    \mc{1}{l}{\footnotesize{Male}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{0.463}} & \mc{1}{c}{\footnotesize{0.042}} & \mc{1}{c}{\footnotesize{(0.837)}} & \mc{1}{c}{\footnotesize{(0.981)}} \\  
+    \mc{1}{l}{\scriptsize{Birth Weight}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{7.301}} & \mc{1}{c}{\scriptsize{6.538}} & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.450)}} \\  
 
-    \mc{1}{l}{\footnotesize{Birth Weight}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{7.299}} & \mc{1}{c}{\footnotesize{-0.768}} & \mc{1}{c}{\footnotesize{(0.181)}} & \mc{1}{c}{\footnotesize{(0.539)}} \\  
+    \mc{1}{l}{\scriptsize{No. Siblings in Household}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{0.385}} & \mc{1}{c}{\scriptsize{0.312}} & \mc{1}{c}{\scriptsize{(0.550)}} & \mc{1}{c}{\scriptsize{(0.800)}} \\  
 
-    \mc{1}{l}{\footnotesize{No. Siblings in Household}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{0.386}} & \mc{1}{c}{\footnotesize{-0.073}} & \mc{1}{c}{\footnotesize{(0.752)}} & \mc{1}{c}{\footnotesize{(0.968)}} \\  
+    \mc{1}{l}{\scriptsize{Birth Year}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{1973}} & \mc{1}{c}{\scriptsize{1973}} & \mc{1}{c}{\scriptsize{(0.750)}} & \mc{1}{c}{\scriptsize{(0.900)}} \\ 
+    \midrule  
 
-    \mc{1}{l}{\footnotesize{Birth Year}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{1,973}} & \mc{1}{c}{\footnotesize{-0.040}} & \mc{1}{c}{\footnotesize{(0.789)}} & \mc{1}{c}{\footnotesize{(0.975)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Education}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{10.231}} & \mc{1}{c}{\scriptsize{10.312}} & \mc{1}{c}{\scriptsize{(0.800)}} & \mc{1}{c}{\scriptsize{(1.000)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's Education}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{10.261}} & \mc{1}{c}{\footnotesize{0.046}} & \mc{1}{c}{\footnotesize{(0.942)}} & \mc{1}{c}{\footnotesize{(0.992)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Age}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{18.385}} & \mc{1}{c}{\scriptsize{17.625}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.650)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's Age}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{18.436}} & \mc{1}{c}{\footnotesize{-0.812}} & \mc{1}{c}{\footnotesize{(0.415)}} & \mc{1}{c}{\footnotesize{(0.834)}} \\  
+    \mc{1}{l}{\scriptsize{Mother Employed}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{0.308}} & \mc{1}{c}{\scriptsize{0.250}} & \mc{1}{c}{\scriptsize{(0.400)}} & \mc{1}{c}{\scriptsize{(0.900)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother Worked Before Pregnancy}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{0.841}} & \mc{1}{c}{\footnotesize{0.095}} & \mc{1}{c}{\footnotesize{(0.435)}} & \mc{1}{c}{\footnotesize{(0.857)}} \\  
+    \mc{1}{l}{\scriptsize{Parental Income}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{5,393}} & \mc{1}{c}{\scriptsize{4,549}} & \mc{1}{c}{\scriptsize{(0.650)}} & \mc{1}{c}{\scriptsize{(0.950)}} \\  
 
-    \mc{1}{l}{\footnotesize{Parental Income}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{1,760}} & \mc{1}{c}{\footnotesize{212}} & \mc{1}{c}{\footnotesize{(0.867)}} & \mc{1}{c}{\footnotesize{(0.986)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's IQ}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{87.154}} & \mc{1}{c}{\scriptsize{85.438}} & \mc{1}{c}{\scriptsize{(0.600)}} & \mc{1}{c}{\scriptsize{(0.800)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's IQ}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{87.087}} & \mc{1}{c}{\footnotesize{-1.564}} & \mc{1}{c}{\footnotesize{(0.645)}} & \mc{1}{c}{\footnotesize{(0.946)}} \\  
+    \mc{1}{l}{\scriptsize{Father at Home}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{13}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{0.231}} & \mc{1}{c}{\scriptsize{0.188}} & \mc{1}{c}{\scriptsize{(0.750)}} & \mc{1}{c}{\scriptsize{(0.900)}} \\  
 
-    \mc{1}{l}{\footnotesize{Father at Home}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{0.225}} & \mc{1}{c}{\footnotesize{-0.039}} & \mc{1}{c}{\footnotesize{(0.806)}} & \mc{1}{c}{\footnotesize{(0.975)}} \\  
-
-  \hline\hline
+  \bottomrule
   \end{tabular}
-    \begin{tablenotes}
-    \scriptsize
-    \item 
-Note: this table shows the balance in observed characteristics between the treatment 
-and control groups at baseline. We present $p$-values from single hypothesis testing 
-per characteristic and multiple hypotheses testing across all characteristics.
-Both $p$-values are two-sided and non-parametric. We construct them 
-based on 1,000 re-draws of the full sample. The estimates we display are the means of 
-the empirical bootstrap distribution. 
-
-    \end{tablenotes}
-  \end{threeparttable}
-
-\end{table}
