--- a/AppOutput/Program/baseline_coh4.tex
+++ b/AppOutput/Program/baseline_coh4.tex
@@ -1,49 +1,31 @@
-\begin{table}[H]
-\captionsetup{singlelinecheck=false,justification=centering}
-\caption{Baseline Characteristics by Treatment Status, Cohort 4 \label{tab:baseline_coh4}}
+  \begin{tabular}{cccccccc}
+  \toprule
 
-  \begin{threeparttable}
-  \begin{tabular}{ccccccc}
-  \hline\hline
+     &  & \scriptsize{Control} & \scriptsize{Treated} & \scriptsize{Control} & \scriptsize{Treated} & \mc{2}{c}{\scriptsize{$p$-value}} \\  
 
-     &  &  & \footnotesize{Control} & \footnotesize{Treatment} & \mc{2}{c}{\footnotesize{$p$-value}} \\  
+    \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{Obs.} & \scriptsize{Obs.} & \scriptsize{Mean} & \scriptsize{Mean} & \scriptsize{Single $H_0$} & \scriptsize{Multiple $H_0$} \\ 
+    \midrule  
 
-    \footnotesize{Variable} & \footnotesize{Age} & \footnotesize{Obs} & \footnotesize{Mean} & \footnotesize{Effect} & \footnotesize{Single $H_0$} & \footnotesize{Multiple $H_0$} \\ 
-    \hline  
+    \mc{1}{l}{\scriptsize{Male}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{0.600}} & \mc{1}{c}{\scriptsize{0.571}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.900)}} \\  
 
-    \mc{1}{l}{\footnotesize{Male}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{0.597}} & \mc{1}{c}{\footnotesize{-0.020}} & \mc{1}{c}{\footnotesize{(0.910)}} & \mc{1}{c}{\footnotesize{(0.987)}} \\  
+    \mc{1}{l}{\scriptsize{Birth Weight}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{7.294}} & \mc{1}{c}{\scriptsize{7.162}} & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(0.750)}} \\  
 
-    \mc{1}{l}{\footnotesize{Birth Weight}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{7.307}} & \mc{1}{c}{\footnotesize{-0.130}} & \mc{1}{c}{\footnotesize{(0.785)}} & \mc{1}{c}{\footnotesize{(0.971)}} \\  
+    \mc{1}{l}{\scriptsize{No. Siblings in Household}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{0.467}} & \mc{1}{c}{\scriptsize{1.000}} & \mc{1}{c}{\scriptsize{(0.300)}} & \mc{1}{c}{\scriptsize{(0.350)}} \\  
 
-    \mc{1}{l}{\footnotesize{No. Siblings in Household}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{0.480}} & \mc{1}{c}{\footnotesize{0.510}} & \mc{1}{c}{\footnotesize{(0.232)}} & \mc{1}{c}{\footnotesize{(0.646)}} \\  
+    \mc{1}{l}{\scriptsize{Birth Year}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{1977}} & \mc{1}{c}{\scriptsize{1977}} & \mc{1}{c}{\scriptsize{(0.700)}} & \mc{1}{c}{\scriptsize{(0.650)}} \\ 
+    \midrule  
 
-    \mc{1}{l}{\footnotesize{Birth Year}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{1,977}} & \mc{1}{c}{\footnotesize{-0.095}} & \mc{1}{c}{\footnotesize{(0.562)}} & \mc{1}{c}{\footnotesize{(0.913)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Education}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{9.533}} & \mc{1}{c}{\scriptsize{10.429}} & \mc{1}{c}{\scriptsize{(0.200)}} & \mc{1}{c}{\scriptsize{(0.350)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's Education}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{9.534}} & \mc{1}{c}{\footnotesize{0.886}} & \mc{1}{c}{\footnotesize{(0.233)}} & \mc{1}{c}{\footnotesize{(0.620)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's Age}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{19.867}} & \mc{1}{c}{\scriptsize{21.786}} & \mc{1}{c}{\scriptsize{(0.250)}} & \mc{1}{c}{\scriptsize{(0.550)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's Age}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{19.901}} & \mc{1}{c}{\footnotesize{1.860}} & \mc{1}{c}{\footnotesize{(0.330)}} & \mc{1}{c}{\footnotesize{(0.769)}} \\  
+    \mc{1}{l}{\scriptsize{Mother Employed}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{0.267}} & \mc{1}{c}{\scriptsize{0.357}} & \mc{1}{c}{\scriptsize{(0.600)}} & \mc{1}{c}{\scriptsize{(0.700)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother Worked Before Pregnancy}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{0.803}} & \mc{1}{c}{\footnotesize{0.197}} & \mc{1}{c}{\footnotesize{\textbf{(0.056)}}} & \mc{1}{c}{\footnotesize{(0.238)}} \\  
+    \mc{1}{l}{\scriptsize{Parental Income}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{5,760}} & \mc{1}{c}{\scriptsize{10,916}} & \mc{1}{c}{\scriptsize{\textbf{(0.100)}}} & \mc{1}{c}{\scriptsize{(0.200)}} \\  
 
-    \mc{1}{l}{\footnotesize{Parental Income}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{3,158}} & \mc{1}{c}{\footnotesize{2,286}} & \mc{1}{c}{\footnotesize{(0.192)}} & \mc{1}{c}{\footnotesize{(0.554)}} \\  
+    \mc{1}{l}{\scriptsize{Mother's IQ}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{85.467}} & \mc{1}{c}{\scriptsize{85.786}} & \mc{1}{c}{\scriptsize{(0.850)}} & \mc{1}{c}{\scriptsize{(0.950)}} \\  
 
-    \mc{1}{l}{\footnotesize{Mother's IQ}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{85.481}} & \mc{1}{c}{\footnotesize{0.363}} & \mc{1}{c}{\footnotesize{(0.950)}} & \mc{1}{c}{\footnotesize{(0.992)}} \\  
+    \mc{1}{l}{\scriptsize{Father at Home}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{14}} & \mc{1}{c}{\scriptsize{0.200}} & \mc{1}{c}{\scriptsize{0.143}} & \mc{1}{c}{\scriptsize{(0.750)}} & \mc{1}{c}{\scriptsize{(0.700)}} \\  
 
-    \mc{1}{l}{\footnotesize{Father at Home}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{0.205}} & \mc{1}{c}{\footnotesize{-0.064}} & \mc{1}{c}{\footnotesize{(0.657)}} & \mc{1}{c}{\footnotesize{(0.934)}} \\  
-
-  \hline\hline
+  \bottomrule
   \end{tabular}
-    \begin{tablenotes}
-    \scriptsize
-    \item 
-Note: this table shows the balance in observed characteristics between the treatment 
-and control groups at baseline. We present $p$-values from single hypothesis testing 
-per characteristic and multiple hypotheses testing across all characteristics.
-Both $p$-values are two-sided and non-parametric. We construct them 
-based on 1,000 re-draws of the full sample. The estimates we display are the means of 
-the empirical bootstrap distribution. 
-
-    \end{tablenotes}
-  \end{threeparttable}
-
-\end{table}
