josh updated results tables with trimming; josh modified IRR and CBA code to use trimming.

--- a/output/cba_summary.tex
+++ b/output/cba_summary.tex
@@ -9,12 +9,12 @@ Estimate 	&	IRR	&	B/C	&	IRR	&	B/C	&	IRR	&	B/C	\\
 % INSERT summary_tex.xls FILE BELOW
 % INSERT summary_tex.xls FILE BELOW
 
-Baseline	&	0.10 	&	2.30	&	0.15 &	7.88 	&	\textbf{0.13}	&	4.35	\\
-	&	(0.12)	&	(1.56)	&	(0.13)	&	(8.06)	&	(0.11)	&	(2.57)	\\
-Relative to Staying at Home	&	-0.14	&	\textbf{4.97}	&	0.02	&	0.55	&	\textbf{0.09} &	3.78	\\
-	&	(0.13)	&	(2.02)	&	(0.13)	&	(3.00)	&	(0.05)	&	(2.15)	\\
-Relative to Alternative Preschools	&	0.08		&	1.58	&	\textbf{0.20}	&	\textbf{12.24}	&	\textbf{0.12}	&	4.34	\\
-	&	(0.14)	&	(1.20)	&	(0.14)	&	(5.39)	&	(0.09)	&	(2.67)	\\
+Baseline	&	0.10 	&	2.30	&	\textbf{0.15} &	\textbf{7.88} 	&	\textbf{0.13}	&	\textbf{4.35}	\\
+	&	(0.08)	&	(1.15)	&	(0.11)	&	(4.31)	&	(0.09)	&	(2.00)	\\
+Relative to Staying at Home	&	-0.14	&	\textbf{4.97}	&	0.02	&	0.55	&	\textbf{0.09} &	\textbf{3.78}	\\
+	&	(0.11)	&	(1.58)	&	(0.07)	&	(2.25)	&	(0.03)	&	(1.68)	\\
+Relative to Alternative Preschools	&	0.08		&	1.58	&	\textbf{0.20}	&	\textbf{12.24}	&	\textbf{0.12}	&	\textbf{4.34}	\\
+	&	(0.08)	&	(0.93)	&	(0.13)	&	(4.16)	&	(0.07)	&	(2.14)	\\
 
 % INSERT summary_tex.xls FILE ABOVE
 % INSERT summary_tex.xls FILE ABOVE
