--- a/output/sensitivity.tex
+++ b/output/sensitivity.tex
@@ -1,42 +1,32 @@
-\begin{tabular}{l r r r r r r r r r}
-\toprule
-	&	\mc{3}{c}{Females}					&	\mc{3}{c}{Males}					&	\mc{3}{c}{Pooled}					\\
-		\cmidrule(lr){2-4}						\cmidrule(lr){5-7}						\cmidrule(lr){8-10}					
-Removed Component	&	NPV	&	IRR	&	B/C	&	NPV	&	IRR	&	B/C	&	NPV	&	IRR	&	B/C	\\ 
-
-\midrule
-
-% INSERT sensitivity.txt FILE BELOW
-% INSERT sensitivity.txt FILE BELOW
-% INSERT sensitivity.txt FILE BELOW
-
-None	&		&	0.10	&	2.30	&		&	0.15	&	7.88	&		&	\textbf{0.13}	&	4.35	\\
-	&		&	(0.12)	&	(1.56)	&		&	(0.13)	&	(8.06)	&		&	(0.11)	&	(2.57)	\\ \\
-Parental Income	&	\textbf{112,402}	&	0.03	&	1.11	&	\textbf{91,722}	&	0.11	&	6.90	&	\textbf{115,026}	&	\textbf{0.08}	&	3.13	\\
-	&	(54,785)	&	(0.11)	&	(1.43)	&	(50,235)	&	(0.10)	&	(8.03)	&	(33,070)	&	(0.06)	&	(2.47)	\\
-Subject QALY	&	-1,332	&	0.10	&	2.32	&	27,122	&	-0.11	&	7.59	&	9,119	&	0.13	&	4.25	\\
-	&	(66,285)	&	(0.11)	&	(1.29)	&	(438,772)	&	(0.12)	&	(5.77)	&	(50,350)	&	(0.12)	&	(2.49)	\\
-Subject Labor Income	&	34,590	&	0.10	&	1.94	&	184,152	&	0.15	&	5.93	&	105,422	&	0.12	&	3.23	\\
-	&	(92,190)	&	(0.13)	&	(1.26)	&	(369,341)	&	(0.12)	&	(7.09)	&	(131,892)	&	(0.11)	&	(2.21)	\\
-Subject Transfer Income	&	10,342	&	0.10	&	2.19	&	903	&	0.15	&	7.87	&	-3,450	&	\textbf{0.13}	&	4.39	\\
-	&	(16,230)	&	(0.12)	&	(1.56)	&	(27,819)	&	(0.13)	&	(7.93)	&	(7,909)	&	(0.11)	&	(2.58)	\\
-Medical Expenditures	&	10,913	&	0.10	&	2.19	&	12,043	&	\textbf{0.15}	&	7.75	&	13,478	&	\textbf{0.12}	&	4.21	\\
-	&	(28,780)	&	(0.11)	&	(1.43)	&	(161,370)	&	(0.09)	&	(7.43)	&	(26,522)	&	(0.09)	&	(2.52)	\\
-Control Contamination	&	\textbf{16,725}	&	0.08	&	2.13	&	\textbf{13,543}	&	0.14	&	7.73	&	\textbf{13,879}	&	\textbf{0.11}	&	4.20	\\
-	&	(2,297)	&	(0.11)	&	(1.56)	&	(2,105)	&	(0.12)	&	(8.05)	&	(1,604)	&	(0.09)	&	(2.57)	\\
-Education Costs	&	-43,718	&	0.12	&	2.77	&	3,260	&	0.15	&	7.84	&	-15,381	&	\textbf{0.13}	&	4.51	\\
-	&	(11,928)	&	(0.12)	&	(1.54)	&	(12,844)	&	(0.12)	&	(8.07)	&	(8,456)	&	(0.11)	&	(2.56)	\\
-Crime Costs	&	\textbf{77,542}	&	0.07	&	1.48	&	410,794	&	0.11	&	3.52	&	172,637	&	0.08	&	2.52	\\
-	&	(40,071)	&	(0.13)	&	(1.47)	&	(373,117)	&	(0.11)	&	(7.18)	&	(184,552)	&	(0.09)	&	(1.64)	\\ \\
-Deadweight Loss	&		&	0.18	&	3.06	&		&	\textbf{0.20}	&	\textbf{11.48}	&		&	0.17	&	\textbf{6.37}	\\
-	&		&	(0.18)	&	(2.22)	&		&	(0.15)	&	(11.60)	&		&	(0.15)	&	(3.83)	\\
-0\% Discount Rate	&		&		&	4.72	&		&		&	19.10	&		&		&	9.40	\\
-	&		&		&	(4.94)	&		&		&	(28.09)	&		&		&	(6.67)	\\
-5\% Discount Rate	&		&		&	1.66	&		&		&	4.79	&		&		&	2.91	\\
-	&		&		&	(0.89)	&		&		&	(4.03)	&		&		&	(1.48)	\\	
-% INSERT sensitivity.txt FILE ABOVE
-% INSERT sensitivity.txt FILE ABOVE
-% INSERT sensitivity.txt FILE ABOVE
-
-\bottomrule
-\end{tabular}
+\begin{tabular}{l r r r r r r r r r}																			
+\toprule																			
+&       \mc{3}{c}{Females}      &       \mc{3}{c}{Males}        &       \mc{3}{c}{Pooled}       \\																			
+\cmidrule(lr){2-4}      \cmidrule(lr){5-7}      \cmidrule(lr){8-10}																			
+Removed Component       &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     \\																			
+\midrule																			
+None	&		&	0.11	&	3.52	&		&	\textbf{0.16}	&	9.21	&		&	\textbf{0.13}	&	\textbf{5.80}	\\
+	&		&	(0.09)	&	(2.31)	&		&	(0.11)	&	(6.36)	&		&	(0.05)	&	(2.69)	\\ \\
+Parental Income	&	\textbf{112,402}	&	0.05	&	2.33	&	\textbf{91,722}	&	\textbf{0.12}	&	8.24	&	\textbf{115,026}	&	\textbf{0.09}	&	4.58	\\
+	&	(54,785)	&	(0.07)	&	(2.20)	&	(50,235)	&	(0.08)	&	(6.34)	&	(33,070)	&	(0.03)	&	(2.59)	\\
+Subject QALY	&	96,383	&	0.10	&	2.50	&	102,236	&	-.11	&	\textbf{8.13}	&	120,009	&	-.11	&	4.52	\\
+	&	(212,381)	&	(0.09)	&	(1.22)	&	(588,171)	&	(0.11)	&	(5.26)	&	(125,845)	&	(0.12)	&	(2.44)	\\
+Subject Labor Income	&	39,587	&	0.11	&	3.10	&	191,868	&	\textbf{0.16}	&	7.18	&	112,510	&	\textbf{0.13}	&	\textbf{4.60}	\\
+	&	(94,213)	&	(0.09)	&	(2.13)	&	(370,654)	&	(0.11)	&	(5.37)	&	(133,018)	&	(0.05)	&	(2.40)	\\
+Subject Transfer Income	&	8,292	&	0.11	&	3.43	&	-550	&	\textbf{0.16}	&	9.22	&	-5,920	&	\textbf{0.13}	&	\textbf{5.86}	\\
+	&	(16,685)	&	(0.09)	&	(2.34)	&	(24,321)	&	(0.11)	&	(6.41)	&	(8,114)	&	(0.05)	&	(2.70)	\\
+Medical Expenditures	&	10,913	&	0.11	&	3.40	&	12,043	&	\textbf{0.16}	&	9.08	&	13,478	&	\textbf{0.13}	&	\textbf{5.65}	\\
+	&	(28,780)	&	(0.08)	&	(2.22)	&	(161,370)	&	(0.08)	&	(6.29)	&	(26,522)	&	(0.05)	&	(2.67)	\\
+Control Contamination	&	\textbf{16,725}	&	0.09	&	3.34	&	\textbf{13,543}	&	\textbf{0.15}	&	9.07	&	\textbf{13,879}	&	\textbf{0.12}	&	\textbf{5.65}	\\
+	&	(2,297)	&	(0.08)	&	(2.31)	&	(2,105)	&	(0.10)	&	(6.35)	&	(1,604)	&	(0.04)	&	(2.68)	\\
+Education Costs	&	-41,792	&	\textbf{0.13}	&	3.96	&	12,234	&	\textbf{0.15}	&	9.08	&	-16,551	&	\textbf{0.14}	&	\textbf{5.97}	\\
+	&	(13,198)	&	(0.09)	&	(2.30)	&	(14,072)	&	(0.10)	&	(6.39)	&	(9,328)	&	(0.05)	&	(2.68)	\\
+Crime Costs	&	\textbf{89,735}	&	0.09	&	2.57	&	446,517	&	\textbf{0.12}	&	4.48	&	194,724	&	\textbf{0.09}	&	\textbf{3.73}	\\
+	&	(41,511)	&	(0.10)	&	(2.28)	&	(421,521)	&	(0.08)	&	(5.24)	&	(197,764)	&	(0.04)	&	(1.82)	\\ \\
+Deadweight Loss	&		&	\textbf{0.18}	&	4.90	&		&	\textbf{0.21}	&	13.45	&		&	\textbf{0.17}	&	\textbf{8.57}	\\
+	&		&	(0.14)	&	(3.38)	&		&	(0.13)	&	(9.60)	&		&	(0.08)	&	(4.02)	\\
+0\% Discount Rate	&		&		&	9.98	&		&		&	24.18	&		&		&	\textbf{15.62}	\\
+	&		&		&	(9.37)	&		&		&	(21.73)	&		&		&	(8.20)	\\
+5\% Discount Rate	&		&		&	2.16	&		&		&	\textbf{5.44}	&		&		&	\textbf{3.52}	\\
+	&		&		&	(1.10)	&		&		&	(3.29)	&		&		&	(1.48)	\\
+\bottomrule																			
+\end{tabular}																			
