anna changes to crime appendix (abc and care)

--- a/Appendices/Crime.tex
+++ b/Appendices/Crime.tex
@@ -1,16 +1,14 @@
 \section{Quantifying the Benefits in Crime Reduction} \label{appendix:crime}
 
-\noindent \textbf{[JLG: This Appendix is preliminary and explains the crime projections for ABC only, although all our calculation include CARE. For CARE's crime outcomes we follow the exact same methodology. We are updating this appendix.]}
-
 \subsection{Data Description}
 
-\noindent The crime data available in ABC come from four different sources provided by the program, which we supplement with auxiliary datasets. We summarize the ABC and auxiliary datasets related to crime below. \\
+\noindent The crime data available in ABC and CARE come from four different sources provided by the program, which we supplement with auxiliary datasets. We summarize the ABC and CARE datasets and auxiliary datasets related to crime below. \\
 
-\subsubsection{ABC Datasets}
+\subsubsection{ABC and CARE Datasets}
 \begin{enumerate}
-\item Administrative Youth Arrests Dataset.  This dataset records all arrests up to the age at which the data were obtained (April, 1996), when ABC subjects were about 21 years old. The categories of crimes in this dataset are coarser than the ones that we use in the other datasets: it categorizes crimes into property, violent, drug, and miscellaneous crimes. We assume some equivalences, as shown in Table~\ref{tab:crime_cat}.
-\item Administrative Adult Arrests Dataset. Gathered when ABC individuals were around 34 years old, this dataset includes individual data on arrests, with short descriptions of the associated offenses. This dataset includes some subjects for whom the arrest history is missing. To resolve this, we use a methodology (detailed below) involving the sentences data, which does not have missing values.
-\item Administrative Sentences Dataset. Gathered when ABC subjects were about 34 years old, this dataset includes individual data on sentences, with descriptions of the crimes. It also includes total sentence length (projected and actual) and punishment type (jail, prison, parole).
+\item Administrative Youth Arrests Dataset.  This dataset is only available for ABC. This dataset records all arrests up to the age at which the data were obtained (April, 1996), when ABC subjects were about 21 years old. The categories of crimes in this dataset are coarser than the ones that we use in the other datasets: it categorizes crimes into property, violent, drug, and miscellaneous crimes. We assume some equivalences, as shown in Table~\ref{tab:crime_cat}.
+\item Administrative Adult Arrests Dataset. Gathered when ABC and CARE individuals were around 34 years old, this dataset includes individual data on arrests, with short descriptions of the associated offenses. This dataset includes some subjects for whom the arrest history is missing. To resolve this, we use a methodology (detailed below) involving the sentences data, which does not have missing values.
+\item Administrative Sentences Dataset. Gathered when ABC and CARE subjects were about 34 years old, this dataset includes individual data on sentences, with descriptions of the crimes. It also includes total sentence length (projected and actual) and punishment type (jail, prison, parole).
 \item Self-reported Adult Crimes Dataset. A module on crimes was included at the age-21 and age-30 interviews. After matching all datasets, we use the information from the self-reported crimes whenever a particular crime does not appear in the other datasets.
 \end{enumerate}
 
@@ -24,7 +22,7 @@
 \end{enumerate}
 
 \subsubsection{Crime Categories}
-\noindent The administrative adult datasets have descriptions of all crimes committed by ABC subjects. We categorize these crimes to be as comparable as possible to the categories in the other data sources and in the literature on calculating the cost of crime. However, it is inevitable to have some crimes that do not clearly fit into the broad categories. As shown in Table \ref{tab:crime_cat}, the different experimental and auxiliary datasets and the literature use different crime categories. The categorization we present is our effort to make all sources comparable. \\
+\noindent The administrative adult datasets have descriptions of all crimes committed by ABC and CARE subjects. We categorize these crimes to be as comparable as possible to the categories in the other data sources and in the literature on calculating the cost of crime. However, it is inevitable to have some crimes that do not clearly fit into the broad categories. As shown in Table \ref{tab:crime_cat}, the different experimental and auxiliary datasets and the literature use different crime categories. The categorization we present is our effort to make all sources comparable. \\
 
 \begin{table}[H]
 \begin{threeparttable}
@@ -75,7 +73,7 @@
 
 
 \subsubsection{Count Arrests and Sentences}
-\noindent Unlike previous studies, we use several datasets to construct measures of criminal activity of the ABC subject. We generate a count of the number of arrests and of the number of sentences by crime category for each ABC subject. We start by counting sentences, which is trivial, as we have complete information on sentences for all subjects in one dataset. \\
+\noindent Unlike previous studies, we use several datasets to construct measures of criminal activity of the ABC or CARE subject. We generate a count of the number of arrests and of the number of sentences by crime category for each subject ABC or CARE. We start by counting sentences, which is trivial, as we have complete information on sentences for all subjects in one dataset. \\
 
 \noindent Unlike counting sentences, the count of arrests is more involved.\footnote{Throughout this appendix, for all the calculations involving counting arrests, if the arrest was the result of more than one \textit{offense}, we count the number and type of offenses separately, rather than counting all of them as one. An offense is the precise definition for the unit that we work with.} We now describe the procedure we follow to get a count of arrests that is as complete as possible. We begin by matching, based on crime description and date, the arrests from the adult administrative data, the youth administrative data, and the self-reported dataset. It is possible that the adult data are missing youth arrests that were expunged from the criminal records or crimes committed in states other than North Carolina, which were not obtained in the collection of administrative data. Because we observe the arrest dates, we confirm that we are not duplicating any arrests. To align the youth arrests data, which are categorized more broadly, we assume that all violent crimes are assaults (the most common category of violent crime in the sample) and that all property crimes are larcenies (the most common category of property crime). We categorize both drug and miscellaneous crimes in the miscellaneous category, for which we do not compute victim costs. \\
 %The original number of arrests in the data was 444. Both the youth administrative data and the self-reported arrests were matched in a case-by case basis with the administrative arrest records, thus making the pre-1995 records much more complete. The number of arrests in the data after the matching and elimination of overlapping arrests is 794.
@@ -96,9 +94,9 @@
 
 \subsubsection{Construct Predictions}
 
-\noindent The data available for the ABC subjects crimes committed up to age 34. However, we believe that the effect of the program on crime does not stop at that age. To predict the number of crimes that the study participants commit beyond age 34, we use data from the North Carolina Department of Public Safety (NCDPS). Because the crime data are obtained from the same state in which ABC was implemented, the prediction model is appropriate for the ABC sample. To the best of our knowledge, no study of the effects of an early childhood education program has ever used microdata to estimate a predictive model for future crimes. The estimations in \cite{Heckman_Moon_etal_2010_RateofReturn} are based on national age ratios (crimes of a certain category committed by older people over crimes of the same category committed by younger people at a specific time), rather than on microdata. However, age ratios only consider the same category of crime as an input to the estimation model and the results can reflect demographic transitions. \\
+\noindent The data available describes the ABC and CARE subjects' crimes committed up to age 34. However, we believe that the effect of the program on crime does not stop at that age. To predict the number of crimes that the study participants commit beyond age 34, we use data from the North Carolina Department of Public Safety (NCDPS). Because the crime data are obtained from the same state in which ABC was implemented, the prediction model is appropriate for the ABC and CARE samples. To the best of our knowledge, no study of the effects of an early childhood education program has ever used microdata to estimate a predictive model for future crimes. The estimations in \cite{Heckman_Moon_etal_2010_RateofReturn} are based on national age ratios (crimes of a certain category committed by older people over crimes of the same category committed by younger people at a specific time), rather than on microdata. However, age ratios only consider the same category of crime as an input to the estimation model and the results can reflect demographic transitions. \\
 
-\noindent It would be ideal to use prediction models estimated from the same cohorts as the ABC participants. However, it is not possible to predict crimes committed until older ages because the ABC subjects are currently about 46 years old. To predict crimes at older ages, it is necessary to use earlier cohorts. The data are available from 1972 (44 years ago as of 2016), and thus they do not contain a complete criminal history for any cohort of individuals. 
+\noindent It would be ideal to use prediction models estimated from the same cohorts as the ABC and CARE subjects. However, it is not possible to predict crimes committed until older ages because the ABC and CARE subjects are currently about 46 years old. To predict crimes at older ages, it is necessary to use earlier cohorts. The data are available from 1972 (44 years ago as of 2016), and thus they do not contain a complete criminal history for any cohort of individuals. 
 %Given that, we have to choose specific cohorts for the estimations, such that they are old enough to cover the ages we need to predict, and young enough to have their entire crime life covered in the dataset, in the same way as the entire crime life of ABC individuals in covered in our data. In particular,
 We assume that few crimes are committed after the age of 50. \\
 %, and that crime life does not start until age 16.
@@ -212,7 +210,7 @@ We calculate our predictions using a five-step procedure: \\
 %\end{sidewaystable}
 
 
-\noindent This procedure gives a prediction of the number of sentences that the ABC subjects will receive after age 34. From the predicted number of sentences, we predict the number of arrests up to age 50. Figure \ref{fig:predictions} shows the effect of our prediction methodology. The effect is quantitatively much larger for arrests than for sentences. For both arrests and sentences, including the predicted crimes, this effect adds 30-50\% more crimes to our previous totals. The predictions are roughly proportional to the previous crimes, as discussed before. \\
+\noindent This procedure gives a prediction of the number of sentences that the ABC and CARE subjects will receive after age 34. From the predicted number of sentences, we predict the number of arrests up to age 50. Figure \ref{fig:predictions} shows the effect of our prediction methodology. The effect is quantitatively much larger for arrests than for sentences. For both arrests and sentences, including the predicted crimes, this effect adds 30-50\% more crimes to our previous totals. The predictions are roughly proportional to the previous crimes, as discussed before. \\
 
 \begin{figure}[H]
 \caption{Constructed Predictions}
@@ -224,7 +222,7 @@ We calculate our predictions using a five-step procedure: \\
 }\end{figure}
 
 \subsection{Victimization Inflation}
-\noindent Even though we have administrative data on crimes, we only observe the crimes that had justice system consequences (arrests or sentences). However, it is possible that the subjects committed more crimes than what we observe. Victimization Inflation (VI) is a method to capture benefits in crime reduction for crimes that did not result in justice system consequences.\footnote{\citet{Belfield_Nores_etal_2006_JHR,Heckman_Moon_etal_2010_RateofReturn}.} For most types of crimes in the US, there are many more victims than arrests or sentences. Using arrests as an example, VI assumes that those ``unpunished crimes'' were committed by the same people who were arrested for crimes of the same type, and in the same proportion. The calculation of VI uses as an input the national ratios of total number of reported crimes over the number of arrests. VI assumes that those national ratios are also valid for each individual. Under those assumptions, it is possible to find the total number of crimes committed by a subject for a given type of crime as the total number of arrests for that type of crime multiplied by the estimated national ratios for that type of crime. We estimate the total number of victims using two methods, one based on arrests and one based on sentences. Given that the ``unpunished'' crimes are by definition unobserved, it is not straightforward to use a data-driven method to allocate them between those subjects with arrests, those with sentences, and those with neither arrests nor sentences. We calculate separate estimates for arrests and sentences and use the average of those estimates as our main estimate. \\
+\noindent Even though we have administrative data on crimes, we only observe the crimes that had justice system consequences (arrests or sentences). However, it is possible that the subjects committed more crimes than what we observe. Victimization Inflation (VI) is a method to capture benefits in crime reduction for crimes that did not result in justice system consequences.\footnote{\citet{Belfield_Nores_etal_2006_JHR,Heckman_Moon_etal_2010_RateofReturn}.} For most types of crimes in the U.S., there are many more victims than arrests or sentences. Using arrests as an example, VI assumes that those ``unpunished crimes'' were committed by the same people who were arrested for crimes of the same type, and in the same proportion. The calculation of VI uses as an input the national ratios of total number of reported crimes over the number of arrests. VI assumes that those national ratios are also valid for each individual. Under those assumptions, it is possible to find the total number of crimes committed by a subject for a given type of crime as the total number of arrests for that type of crime multiplied by the estimated national ratios for that type of crime. We estimate the total number of victims using two methods, one based on arrests and one based on sentences. Given that the ``unpunished'' crimes are by definition unobserved, it is not straightforward to use a data-driven method to allocate them between those subjects with arrests, those with sentences, and those with neither arrests nor sentences. We calculate separate estimates for arrests and sentences and use the average of those estimates as our main estimate. \\
 
 \subsubsection{Construction of the Total Number of Victims in the U.S.}
 
@@ -302,9 +300,9 @@ We calculate our predictions using a five-step procedure: \\
 \end{enumerate}
 
 \subsubsection{Costs Used in this Study}
-\noindent To summarize, both approaches have strengths and weaknesses: the TD approaches are more likely to reflect costs to the community (e.g. fear and anxiety, avoidance behavior, and protective measures) and better capture the spirit of a prevention program. However, in practice TD estimates rely on strong assumptions, and there are methodological issues associated with obtaining detailed values for the different types of crimes. It is also possible that when people answer the survey used for TD calculations they include some costs that we are including separately, such as justice system costs, and risk of death from non-murder crimes, while BU does not include them. Given those considerations, and the lack of TD costs for some categories of crime, we use BU costs for our main estimates. For completeness, we present cost estimates using both approaches. We choose \cite{Cohen_Rust_etal_2004_Criminology} as representative of the TD approaches, and \cite{McCollister_etal_2010_DAD} as representative of the BU approaches. In terms of timing, both of these studies match well with the ABC data. The bulk of crimes in the ABC data occurred between the late 1990s and early 2000s. While \cite{Cohen_Rust_etal_2004_Criminology} do not report the exact year of their survey, they use Census 2000 figures for their estimates. Even though \cite{McCollister_etal_2010_DAD} is a more recent study, many of the productivity estimates that their costs are based on are taken from papers using data from years with more crimes the late 1990s and early 2000s. The costs in those studies are presented in Table \ref{tab:individual-crime-cost}. Notice that there are some strong differences in the cost of crimes, such as assault, burglary, and especially robbery. \\
+\noindent To summarize, both approaches have strengths and weaknesses: the TD approaches are more likely to reflect costs to the community (e.g. fear and anxiety, avoidance behavior, and protective measures) and better capture the spirit of a prevention program. However, in practice TD estimates rely on strong assumptions, and there are methodological issues associated with obtaining detailed values for the different types of crimes. It is also possible that when people answer the survey used for TD calculations they include some costs that we are including separately, such as justice system costs, and risk of death from non-murder crimes, while BU does not include them. Given those considerations, and the lack of TD costs for some categories of crime, we use BU costs for our main estimates. For completeness, we present cost estimates using both approaches. We choose \cite{Cohen_Rust_etal_2004_Criminology} as representative of the TD approaches, and \cite{McCollister_etal_2010_DAD} as representative of the BU approaches. In terms of timing, both of these studies match well with the ABC and CARE data. The bulk of crimes in the ABC and CARE data occurred between the late 1990s and early 2000s. While \cite{Cohen_Rust_etal_2004_Criminology} do not report the exact year of their survey, they use Census 2000 figures for their estimates. Even though \cite{McCollister_etal_2010_DAD} is a more recent study, many of the productivity estimates that their costs are based on are taken from papers using data from years with more crimes the late 1990s and early 2000s. The costs in those studies are presented in Table \ref{tab:individual-crime-cost}. Notice that there are some strong differences in the cost of crimes, such as assault, burglary, and especially robbery. \\
 
-%The fact that \cite{cohen1994costs} and \cite{miller1996victim} are relatively old studies is an advantage rather than a problem. The studies better reflect the costs of crimes in those years, which are part of the period in which most crimes were committed by subjects in the ABC data. More recent estimates will be based on assumptions about productivity and costs that are not representative of the losses relevant for this study. These studies are complementary, as \cite{miller1996victim} quantifies cost to victims (productivity, medical care, mental health care, police/fire services, social services, property loss and quality of life damages), while \cite{cohen1994costs} provides a quantification of criminal justice system costs. Importantly, this study distinguishes between sources of costs, so we can impute our own cost estimates to sentences, knowing precise information about time in jail for our sample. The most recent study  \citep{mccollister2010cost} is necessary because it considers some types of crimes omitted in the previous papers.
+%The fact that \cite{cohen1994costs} and \cite{miller1996victim} are relatively old studies is an advantage rather than a problem. The studies better reflect the costs of crimes in those years, which are part of the period in which most crimes were committed by subjects in the ABC and CARE data. More recent estimates will be based on assumptions about productivity and costs that are not representative of the losses relevant for this study. These studies are complementary, as \cite{miller1996victim} quantifies cost to victims (productivity, medical care, mental health care, police/fire services, social services, property loss and quality of life damages), while \cite{cohen1994costs} provides a quantification of criminal justice system costs. Importantly, this study distinguishes between sources of costs, so we can impute our own cost estimates to sentences, knowing precise information about time in jail for our sample. The most recent study  \citep{mccollister2010cost} is necessary because it considers some types of crimes omitted in the previous papers.
 
 \begin{table}[H]
 \begin{threeparttable}
@@ -331,16 +329,16 @@ Vandalism			&					&0				\\ \bottomrule
 \end{table}
 
 \subsubsection{Timing of Effects: Incidence vs. Prevalence}
-\noindent We would like to discount the costs of crime according to whether they were \textit{incurred} during a particular age of ABC subjects, because those values should be discounted at a different rate than costs incurred later, even if both costs were \textit{imposed} in the same year. Thus, the value of the imprisonment is discounted year-by-year. We have no information about the timing of costs for victims, so the value of the different crimes for the victims are discounted according to the time they were imposed (the time of the crime's occurrence). \\
+\noindent We would like to discount the costs of crime according to whether they were \textit{incurred} during a particular age of ABC and CARE subjects, because those values should be discounted at a different rate than costs incurred later, even if both costs were \textit{imposed} in the same year. Thus, the value of the imprisonment is discounted year-by-year. We have no information about the timing of costs for victims, so the value of the different crimes for the victims are discounted according to the time they were imposed (the time of the crime's occurrence). \\
 
 \subsubsection{Costs of Imprisonment}
-\noindent Unlike previous studies, we observe the sentences of the ABC participants. This allows for a precise estimation of the costs of imprisonment. For the cost of jail and state prison, we use estimates from the \citet{US-Justice_1988_Report-Crime-Justice}. In 2014 USD, these costs are \$25,338 for a year in a state prison, and \$21,939 for a year in jail.
+\noindent Unlike previous studies, we observe the sentences of the ABC and CARE. This allows for a precise estimation of the costs of imprisonment. For the cost of jail and state prison, we use estimates from the \citet{US-Justice_1988_Report-Crime-Justice}. In 2014 USD, these costs are \$25,338 for a year in a state prison, and \$21,939 for a year in jail.
 It is important to clarify that we only include costs of the justice system for the crimes that are known by the justice system, not for the crimes that we impute through victimization inflation. \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Effects on Costs of Crime}
 
-%\subsubsection{Criminal Behavior.} The results show that there are clear reductions in the amount of crime committed between the control and treatment groups. This holds true for the majority of the categories of crime. The exceptions were Vehicle Theft, Assault, Robbery, and Arson. The visualization of the ABC data in Figure \ref{tab:lifehistory} represents the life history of each of the individuals within the ABC study that committed at least one crime, with each dot as an offense and each line as a period of incarceration. Also shown are the most serious crimes committed in the ABC data, including a habitual felon, manslaughter, and indecent liberties with children. The largest treatment effects occurred in cases of Miscellaneous, Fraud, and Larceny crimes. In sentences alone, there was a 46.3\% reduction in the number of cases, and in arrests, there was a 39\% reduction in cases for those in the treatment group compared to the control group. There are substantially fewer arrests for the individuals in the treatment group, and although there are still a few who committed a series of crimes, many did not have arrests at all.
+%\subsubsection{Criminal Behavior.} The results show that there are clear reductions in the amount of crime committed between the control and treatment groups. This holds true for the majority of the categories of crime. The exceptions were Vehicle Theft, Assault, Robbery, and Arson. The visualization of the ABC and CARE data in Figure \ref{tab:lifehistory} represents the life history of each of the individuals within the ABC study that committed at least one crime, with each dot as an offense and each line as a period of incarceration. Also shown are the most serious crimes committed in the ABC data, including a habitual felon, manslaughter, and indecent liberties with children. The largest treatment effects occurred in cases of Miscellaneous, Fraud, and Larceny crimes. In sentences alone, there was a 46.3\% reduction in the number of cases, and in arrests, there was a 39\% reduction in cases for those in the treatment group compared to the control group. There are substantially fewer arrests for the individuals in the treatment group, and although there are still a few who committed a series of crimes, many did not have arrests at all.
 %numbers from combined_datasetv3
 
 \subsubsection{Effects on Costs Before Victimization Inflation}  Figure \ref{tab:diff-costs} presents the estimated costs per type of cost before victimization inflation.
